--- a/FindEvents/app/src/main/res/layout/activity_register_users.xml
+++ b/FindEvents/app/src/main/res/layout/activity_register_users.xml
@@ -101,8 +101,9 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="40dp"
             android:layout_marginEnd="32dp"
-            android:text="@string/ok"
             android:background="@drawable/button_rounded"
+            android:onClick="registerComplete"
+            android:text="@string/ok"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etPasswordConfirm" />
