--- a/FindEvents/app/src/main/res/layout/activity_login_users.xml
+++ b/FindEvents/app/src/main/res/layout/activity_login_users.xml
@@ -12,12 +12,12 @@
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="172dp"
-        android:textStyle="bold"
+        android:layout_marginTop="45dp"
         android:text="@string/findvents"
         android:textAlignment="center"
         android:textColor="#F6F1F1"
         android:textSize="34sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,30 +28,30 @@
         android:id="@+id/btLogin"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="150dp"
+        android:layout_marginStart="120dp"
         android:layout_marginTop="50dp"
-        android:layout_marginEnd="150dp"
+        android:layout_marginEnd="120dp"
         android:background="@drawable/button_rounded"
-        android:text="@string/ingresar"
+        android:text="@string/login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPassword" />
 
     <EditText
         android:id="@+id/etPassword"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="32dp"
+        android:layout_width="293dp"
+        android:layout_height="41dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="60dp"
         android:background="@drawable/register_tv_design"
-        android:textSize="14sp"
-        android:textColorHint="@color/black"
-        android:textColor="@color/black"
-        android:padding="7dp"
         android:ems="10"
-        android:hint="@string/ingresa_tu_contrase_a"
+        android:hint="Contraseña"
         android:inputType="textPassword"
+        android:padding="7dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,38 +59,66 @@
 
     <EditText
         android:id="@+id/etMail"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="32dp"
+        android:layout_width="292dp"
+        android:layout_height="42dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="130dp"
+        android:layout_marginEnd="60dp"
         android:background="@drawable/register_tv_design"
-        android:textSize="14sp"
-        android:textColorHint="@color/black"
-        android:textColor="@color/black"
-        android:padding="7dp"
         android:ems="10"
-        android:hint="@string/ingresa_tu_nombre_de_usuario"
+        android:hint="Email"
         android:inputType="textEmailAddress"
+        android:padding="7dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/tvText2" />
 
     <Button
         android:id="@+id/btRegister"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="73dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="73dp"
-        android:background="#141515"
+        android:layout_marginStart="120dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="120dp"
+        android:background="@drawable/button_rounded"
         android:onClick="registerUser"
-        android:text="@string/no_tienes_una_cuenta_registrate_aqu"
+        android:text="Register"
         android:textColor="#F6F1F1"
-        android:textSize="10sp"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btLogin" />
+
+    <TextView
+        android:id="@+id/tvText1"
+        android:layout_width="wrap_content"
+        android:layout_height="33dp"
+        android:layout_marginTop="40dp"
+        android:text="@string/eventos_frikis_m_s"
+        android:textAlignment="center"
+        android:textColor="#FD5A27"
+        android:textSize="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
+    <TextView
+        android:id="@+id/tvText2"
+        android:layout_width="wrap_content"
+        android:layout_height="33dp"
+        android:layout_marginTop="3dp"
+        android:text="@string/cerca_de_ti"
+        android:textAlignment="center"
+        android:textColor="#F6F1F1"
+        android:textSize="28dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvText1" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
