--- a/FindEvents/app/src/main/res/drawable/register_tv_design.xml
+++ b/FindEvents/app/src/main/res/drawable/register_tv_design.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <corners android:radius="16dp" />
-    <solid android:color="@color/white" />
+    <solid android:color="#ADACAC"
+        />
     <stroke
         android:width="1dp"
         android:color="#363536 " />
