--- a/FindEvents/app/src/main/res/layout/activity_main.xml
+++ b/FindEvents/app/src/main/res/layout/activity_main.xml
@@ -4,32 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#0B0909"
-    android:backgroundTint="#0B0909"
+    android:background="@drawable/background_app"
     tools:context=".MainActivity">
-
-    <Button
-        android:id="@+id/btInit"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:autoText="false"
-        android:background="@drawable/main_activity_rounded"
+    <!--android:background="#0B0909"
         android:backgroundTint="#0B0909"
-        android:contextClickable="false"
-        android:elegantTextHeight="true"
-        android:freezesText="false"
+    -->
+    <ImageView
+        android:id="@+id/ivTitleMain"
+        android:layout_width="0dp"
+        android:layout_height="72dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginEnd="100dp"
         android:onClick="initApp"
-        android:text="@string/findvents"
-        android:textAlignment="center"
-        android:textColor="#F8EEEE"
-        android:textColorHighlight="#B34E4E"
-        android:textSize="34sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        app:srcCompat="@mipmap/findvents_title" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
